RestaurantManagement/src/objects/Food_Order__c.object
<CustomObject>
    <fields>
        <fullName>DeliveryTime__c</fullName>
        <label>Delivery Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderDateTime__c</fullName>
        <label>Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Order Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PriceEstimate__c</fullName>
        <description>This will contain the Order Price + Tax amount
i.e. the summation of the prices of all the items in the order plus the tax applied.</description>
        <inlineHelpText>Order items price summation + Tax.</inlineHelpText>
        <label>Price Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>This will contain the order price i.e. the summation of the prices of all the items in the order.</description>
        <inlineHelpText>Order items price summation.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TableNumber__c</fullName>
        <label>Table Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxEstimate__c</fullName>
        <description>This field will contain the estimated tax on the price of the placed order.</description>
        <inlineHelpText>Tax on placed order as well as the cart.</inlineHelpText>
        <label>Tax Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <description>This field will contain the tax of the items in the placed order.</description>
        <inlineHelpText>Tax on Placed Order</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPriceEstimate__c</fullName>
        <description>This field will contain the summation of the total price of all the order items in this order. This is the expected bill to customer if all his cart items are accepted i.e. delivered.</description>
        <inlineHelpText>This is Expected Bill Amount to charge Customer if all order items are fulfilled.</inlineHelpText>
        <label>Total Price Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <description>This field will contain the summation of the total price of all the order items which have status accepted and forward in this order, so that the customer is charged for the accepted order items only.</description>
        <inlineHelpText>This is Bill Amount to charge Customer.</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Food Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Food Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Food Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>